css/styles.css
/* ... */
.nav-link:hover,
.nav-link:focus {
    color: #404bbf;
}

.nav-link.current {
    color: #404bbf;
}

.nav-link.current::after {
    content: "";
    position: absolute;
    bottom: -1px;
    left: 0;
    width: 100%;
    height: 4px;
    border-radius: 2px;
    background-color: #404bbf;
}

.contacts {
    font-style: normal;
    display: none;
}
@media (min-width: 768px) {
    .contacts { display: block; }
}

.contacts-list {
    display: flex;
    flex-direction: column;
    gap: 12px;
}
@media (min-width: 1158px) {
    .contacts-list {
        flex-direction: row;
        gap: 40px;
    }
}

.contacts-link {
    display: block;
    padding-top: 6px;
    padding-bottom: 6px;
    font-size: 12px;
    line-height: 1.17;
    letter-spacing: 0.04em;
    color: #434455;
    text-decoration: none;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
@media (min-width: 1158px) {
    .contacts-link {
        padding-top: 24px;
        padding-bottom: 24px;
        font-size: 16px;
        line-height: 1.5;
        letter-spacing: 0.02em;
    }
}

.contacts-link:hover,
.contacts-link:focus {
    color: #404bbf;
}

/* =============================================
   HERO SECTION
   ============================================= */

.hero {
    margin: 0 auto;
    padding: 72px 0;
    text-align: center;
    background-color: #2e2f42;
    background-image: linear-gradient(
            rgba(46, 47, 66, 0.7),
            rgba(46, 47, 66, 0.7)
        ),
        url(../images/hero-bg-mobile.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
@media (max-width: 767px) and (min-resolution: 192dpi) {
    .hero {
        background-image: linear-gradient(
                rgba(46, 47, 66, 0.7),
                rgba(46, 47, 66, 0.7)
            ),
            url(../images/hero-bg-mobile@2x.jpg);
    }
}
@media (min-width: 768px) {
    .hero {
        padding: 112px 0;
        background-image: linear-gradient(
                rgba(46, 47, 66, 0.7),
                rgba(46, 47, 66, 0.7)
            ),
            url(../images/hero-bg-tablet.jpg);
    }
}
@media (min-width: 768px) and (max-width: 1157px) and (min-resolution: 192dpi) {
    .hero {
        background-image: linear-gradient(
                rgba(46, 47, 66, 0.7),
                rgba(46, 47, 66, 0.7)
            ),
            url(../images/hero-bg-tablet@2x.jpg);
    }
}
@media (min-width: 1158px) {
    .hero {
        max-width: 1440px;
        padding: 188px 0;
        background-image: linear-gradient(
                rgba(46, 47, 66, 0.7),
                rgba(46, 47, 66, 0.7)
            ),
            url(../images/hero-bg-desktop.jpg);
    }
}
@media (min-width: 1158px) and (min-resolution: 192dpi) {
    .hero {
        background-image: linear-gradient(
                rgba(46, 47, 66, 0.7),
                rgba(46, 47, 66, 0.7)
            ),
            url(../images/hero-bg-desktop@2x.jpg);
    }
}

.hero-title {
    max-width: 216px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 72px;
    font-size: 36px;
    line-height: 1.11;
    letter-spacing: 0.02em;
    color: #ffffff;
    text-align: center;
}
@media (min-width: 768px) {
    .hero-title {
        font-size: 56px;
        line-height: 1.07;
        max-width: 496px;
        margin-bottom: 36px;
    }
}
@media (min-width: 1158px) {
    .hero-title { margin-bottom: 48px; }
}

.hero-btn {
    min-width: 169px;
    height: 56px;
    padding-left: 32px;
    padding-right: 32px;
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.04em;
    color: #ffffff;
    background-color: #4d5ae5;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.hero-btn:hover,
.hero-btn:focus {
    background-color: #404bbf;
}

/* =============================================
   SECTION
   ============================================= */

.section {
    padding-top: 96px;
    padding-bottom: 96px;
}
@media (min-width: 1158px) {
    .section {
        padding-top: 120px;
        padding-bottom: 120px;
    }
}

.section-title {
    margin-bottom: 72px;
    font-size: 36px;
    line-height: 1.11;
    letter-spacing: 0.02em;
    text-align: center;
    text-transform: capitalize;
    color: #2e2f42;
}

/* =============================================
   FEATURES SECTION
   ============================================= */

.features-list {
    display: flex;
    flex-direction: column;
    gap: 72px;
}
@media (min-width: 768px) {
    .features-list {
        flex-direction: row;
        flex-wrap: wrap;
        column-gap: 24px;
        row-gap: 72px;
    }
}
@media (min-width: 1158px) {
    .features-list { gap: 24px; }
}

.features-item {
    flex-basis: 100%;
}
@media (min-width: 768px) {
    .features-item { flex-basis: calc((100% - 24px) / 2); }
}
@media (min-width: 1158px) {
    .features-item { flex-basis: calc((100% - 72px) / 4); }
}

.features-icon-wrap {
    display: none;
    align-items: center;
    justify-content: center;
    height: 112px;
    background-color: #f4f4fd;
    border: 1px solid #8e8f99;
    border-radius: 4px;
    margin-bottom: 8px;
}
@media (min-width: 1158px) {
    .features-icon-wrap { display: flex; }
}

.features-title {
    margin-bottom: 8px;
    font-weight: 700;
    font-size: 36px;
    line-height: 1.11;
    letter-spacing: 0.02em;
    text-align: center;
    color: #2e2f42;
}
@media (min-width: 768px) {
    .features-title { text-align: left; }
}
@media (min-width: 1158px) {
    .features-title {
        font-weight: 500;
        font-size: 20px;
        line-height: 1.2;
    }
}

.features-text {
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
}
@media (min-width: 1158px) {
    .features-text { font-weight: 400; }
}
/* ... */

